# LedControl

./: LICENSE  README.md  go.mod  go.sum  main.go
modules/: colors.go  cpp_server.go  on_off.go  run_commands.go  siren_mode.go
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: light.rs  main.rs
src/assets/: styles.json
src/css/: styles.css
src/js/: main.js  rgb_colors.js  window.js
static/js/: script.js
templates/: index.html
