[package]
name = "ledcontrolr"
version = "0.2.2"
description = "Control yours led ble devices"
authors = ["Deokma"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = ["config-json5"] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "config-json5","system-tray",
    "window-close","window-hide","window-show","window-maximize","window-minimize",
"window-unmaximize","window-unminimize","window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
btleplug = { version = "0.10", features = ["serde"] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
rand = "0.8.5"
uuid = "1.6.1"
pretty_env_logger = "0.4"
once_cell = "1.19.0"
tray-item = "0.9.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
